# restdeck

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml
src/: app.rs  http.rs  main.rs  ui.rs
