[package]
name = "restdeck"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30.1"
crossterm = { version = "0.27.0", features = ["event-stream"] }
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tui-textarea = { version = "0.4.0", features = ["ratatui", "crossterm"] }
