[package]
name = "restdeck"
version = "0.1.2"
edition = "2024"
description = "A lightweight, keyboard-driven REST API client TUI built in Rust using Ratatui and Tokio."
license = "MIT"
readme = "README.md"
repository = "https://github.com/pallaprolus/restdeck"
keywords = ["tui", "ratatui", "api-client", "cli", "rest"]
categories = ["command-line-utilities", "development-tools::debugging"]

[dependencies]
ratatui = "0.30.1"
crossterm = { version = "0.27.0", features = ["event-stream"] }
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tui-textarea = { version = "0.4.0", features = ["ratatui", "crossterm"] }
